--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "javascript",
   "version": "1.0.0",
   "description": "Learn JavaScript",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "node": "^18.20.6",
-    "node-bin-setup": "^1.1.3"
+    "node-bin-setup": "^1.1.3",
+    "nodemon": "^3.1.9"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon"
